--- a/frontend/IcareMobile/app/src/main/res/values/strings.xml
+++ b/frontend/IcareMobile/app/src/main/res/values/strings.xml
@@ -2,4 +2,61 @@
     <string name="app_name">ICare</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Array elements   -->
+    <string-array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+
+    <string-array name="bGroup">
+        <item>a+</item>
+        <item>a-</item>
+        <item>b+</item>
+        <item>b-</item>
+        <item>ab+</item>
+        <item>ab-</item>
+        <item>o+</item>
+        <item>o-</item>
+    </string-array>
+
+    <string-array name="provinces">
+        <item>Western Province</item>
+        <item>Central Province</item>
+        <item>Southern Province</item>
+        <item>Northern Province</item>
+        <item>Eastern Province</item>
+        <item>North Western Province</item>
+        <item>North Central Province</item>
+        <item>Uva Province</item>
+        <item>Sabaragamuwa Province</item>
+    </string-array>
+
+    <string-array name="districts">
+        <item>Ampara</item>
+        <item>Anuradhapura</item>
+        <item>Badulla</item>
+        <item>Batticaloa</item>
+        <item>Colombo</item>
+        <item>Galle</item>
+        <item>Gampaha</item>
+        <item>Hambantota</item>
+        <item>Jaffna</item>
+        <item>Kalutara</item>
+        <item>Kandy</item>
+        <item>Kegalle</item>
+        <item>Kilinochchi</item>
+        <item>Kurunegala</item>
+        <item>Mannar</item>
+        <item>Matale</item>
+        <item>Matara</item>
+        <item>Monaragala</item>
+        <item>Mullaitivu</item>
+        <item>Nuwara Eliya</item>
+        <item>Polonnaruwa</item>
+        <item>Puttalam</item>
+        <item>Ratnapura</item>
+        <item>Trincomalee</item>
+        <item>Vavuniya</item>
+    </string-array>
 </resources>
