--- a/frontend/IcareMobile/app/src/main/res/values/strings.xml
+++ b/frontend/IcareMobile/app/src/main/res/values/strings.xml
@@ -10,14 +10,14 @@
     </string-array>
 
     <string-array name="bGroup">
-        <item>a+</item>
-        <item>a-</item>
-        <item>b+</item>
-        <item>b-</item>
-        <item>ab+</item>
-        <item>ab-</item>
-        <item>o+</item>
-        <item>o-</item>
+        <item>A+</item>
+        <item>A-</item>
+        <item>B+</item>
+        <item>B-</item>
+        <item>AB+</item>
+        <item>AB-</item>
+        <item>O+</item>
+        <item>O-</item>
     </string-array>
 
     <string-array name="provinces">
